--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -23,6 +23,6 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from { transform: rotate(0deg) scale(1); }
+  to { transform: rotate(360deg) scale(1.8); }
 }
