--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -22,6 +22,30 @@
   font-size: large;
 }
 
+.TheGame {
+  table-layout: inherit;
+  align-content: right;
+  align-items: center;
+}
+
+.Map-view {
+  padding: 0px;
+  border-collapse: collapse;
+  border: 1vw double burlywood;
+  background-color: darkgoldenrod;
+}
+
+.Square {
+  padding: 0px;
+  margin: -3%;
+  background-color: aliceblue;
+}
+
+.Map-view-image {
+  width: 100%;
+  display: block;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg) scale(1); }
   to { transform: rotate(360deg) scale(1.8); }
