Style change to properly center align table

--- a/reactfront/src/App.css
+++ b/reactfront/src/App.css
@@ -154,8 +154,8 @@
 }
 
 .Map-view {
+  margin: 0px auto;
   table-layout: auto;
-  transform: translateX(50%);
   object-position: center;
   padding: 10px;
   border-collapse: collapse;
